fixed spacing between elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,19 +50,11 @@ body {
   color: #2f3d40;
 }
 
-.content-card-1 {
-  margin-top: 15px;
-  background-color: #ffffff;
-  padding: 5px;
-  border-radius: 10px;
-}
-
 .content-card-1 p {
   margin-top: 10px;
 }
 
-.content-card-2,
-.content-card-3 {
+.content * {
   margin-top: 15px;
   background-color: #ffffff;
   padding: 5px;
@@ -80,6 +72,19 @@ td {
   text-align: left;
   padding: 8px;
 }
+
+.content h1 {
+  margin-top: auto;
+}
+
+.content h3 {
+  margin-top: 10px;
+}
+
+.content p {
+  margin-top: 10px;
+}
+
 
 /* .table tr:nth-child(odd) {
   background-color: #cfcfcf;
